- fix hero section alignment - add border to weOffer image to show as alignment

--- a/pages/home/components/SearchDashboards/index.module.scss
+++ b/pages/home/components/SearchDashboards/index.module.scss
@@ -1,6 +1,11 @@
 .searchDashboards {
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
   .introduction {
-    height: 300px;
     display: flex;
     justify-content: flex-end;
     transition: height 0.5s ease;
